--- a/src/quote.html
+++ b/src/quote.html
@@ -3,12 +3,12 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>報價單 {{quoteNumber}}</title>
+    <title>報價單</title>
     <style>
     /* 設定 A4 列印尺寸 */
     body {
       background-color: #E5E5E5;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'DFKai-SB', 'BiauKai', '標楷體', sans-serif;
       margin: 0;
       padding: 0;
     }
@@ -27,156 +27,164 @@
     }
 
     header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    header img {
-      max-height: 50px;
-      margin-bottom: 10px;
-    }
-
-    header h1 {
-      color: #2B2927;
-      margin: 0;
-      font-size: 24px;
-    }
-
-    header p {
-      font-size: 14px;
-      color: #353430;
-    }
-
-    .info-container {
       display: flex;
       justify-content: space-between;
       margin-bottom: 20px;
     }
 
-    .info-box {
-      width: 48%;
+    .header-left {
+      display: flex;
+      align-items: center;
     }
 
-    .info-box h2 {
-      font-size: 16px;
-      color: #2B2927;
-      border-bottom: 2px solid #2B2927;
-      padding-bottom: 5px;
-      margin-bottom: 10px;
+    .header-left img {
+      max-height: 70px;
+      margin-right: 20px;
     }
 
-    /* 公司資訊字體稍小 */
-    .company-box p {
-      font-size: 12px;
-      color: #353430;
-      margin: 0;
-      line-height: 1.4;
-    }
-
-    /* 客戶資訊保持較大 */
-    .customer-box p {
-      font-size: 14px;
-      color: #353430;
-      margin: 0;
-      line-height: 1.4;
-    }
-
-    .section {
-      margin-bottom: 20px;
-      page-break-inside: avoid;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 15px;
-      font-size: 12px;
-    }
-
-    th,
-    td {
-      border: 1px solid #353430;
-      padding: 8px;
-      text-align: left;
-    }
-
-    th {
-      background-color: #353430;
-      color: #fff;
-      font-size: 12px;
-    }
-
-    /* Totals 表格：兩行 (標題 + 內容) */
-    .totals-table {
-      width: 100%;
-      margin-top: 20px;
-      border: 1px solid #353430;
-      border-collapse: collapse;
-      font-size: 12px;
-    }
-
-    .totals-table th,
-    .totals-table td {
-      border: 1px solid #353430;
-      padding: 8px;
-      text-align: center;
-    }
-
-    .totals-table th {
-      background-color: #353430;
-      color: #fff;
-    }
-
-    /* 將總計內容加粗 */
-    .totals-table .total-value {
+    .header-left .company-name {
+      font-size: 24px;
       font-weight: bold;
     }
 
-    .notes {
-      font-size: 12px;
-      color: #353430;
-      line-height: 1.4;
+    .header-left .company-address {
+      font-size: 14px;
     }
 
-    footer {
-      text-align: center;
-      margin-top: 20px;
-      color: #353430;
-      font-size: 12px;
+    .header-left .company-phone {
+      font-size: 14px;
+    }
+    .customer-info {
+      width: 100%;
+      margin-bottom: 20px;
     }
 
-    /* 品項描述字體稍小 */
-    .item-description {
-      font-size: 11px;
-    }
-
-    /* 用章/簽名的表格 */
-    .signature-table {
-      border: 2px solid #353430;
+    .customer-info table {
+      width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
-      margin-left: auto;
-      width: 250px;
+      border: none;
     }
 
-    .signature-table td {
-      border: 2px solid #353430;
-      font-size: 12px;
+    .customer-info td {
+      padding: 5px;
+      border: none;
+      font-size: 14px;
+    }
+
+    .customer-info .label {
+      width: 80px;
+      text-align: right;
+      padding-right: 10px;
+    }
+
+    .customer-info .value {
+      text-align: left;
+    }
+
+    .quote-title {
+      text-align: center;
+      margin: 20px 0;
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    .items-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 15px;
+      font-size: 14px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    .items-table th,
+    .items-table td {
+      border: 1px solid #ddd;
+      padding: 12px 8px;
       text-align: center;
       vertical-align: middle;
-      padding: 8px;
-      height: 50px;
     }
 
-    .signature-table .stamp-title {
-      height: 30px;
+    .items-table th {
+      background-color: #f8f9fa;
+      color: #333;
+      font-size: 14px;
+      font-weight: bold;
+      border-bottom: 2px solid #dee2e6;
+      font-family: 'Microsoft JhengHei', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    .signature-table .stamp-area {
-      height: 60px;
+    .items-table tr:nth-child(even) {
+      background-color: #f8f9fa;
     }
 
-    /* 下載 PDF 按鈕：右下方圓形浮動按鈕，顯示「下載 PDF」 */
+    .items-table tr:hover {
+      background-color: #f2f2f2;
+    }
+
+    .items-table .item-number {
+      width: 60px;
+    }
+
+    .items-table .item-name {
+      width: 150px;
+      text-align: left;
+    }
+
+    .items-table .item-description {
+      text-align: left;
+      min-width: 200px;
+    }
+
+    .items-table .item-quantity,
+    .items-table .item-price,
+    .items-table .item-total {
+      width: 100px;
+    }
+
+    .items-table .item-total {
+      font-weight: bold;
+    }
+
+    .total-box {
+      border: 2px solid #000;
+      width: 200px;
+      float: right;
+      margin-top: 20px;
+      font-size: 14px;
+    }
+
+    .total-box table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .total-box td {
+      padding: 5px;
+      border: 1px solid #000;
+    }
+
+    .total-box .label {
+      text-align: right;
+      padding-right: 10px;
+    }
+
+    .notes {
+      clear: both;
+      margin-top: 80px;
+      font-size: 14px;
+    }
+
+    .notes p {
+      margin: 5px 0;
+    }
+
+    .signature {
+      text-align: right;
+      margin-top: 20px;
+      font-size: 14px;
+    }
+
+    /* 下載 PDF 按鈕 */
     #downloadPdfBtn {
       position: fixed;
       bottom: 20px;
@@ -208,81 +216,97 @@
         padding: 0;
       }
     }
-
     </style>
   </head>
 
   <body>
     <div class="container" id="quoteContainer">
       <button id="downloadPdfBtn" onclick="downloadPDF()">下載 PDF</button>
+      
       <header>
-        <!-- logo 圖片 -->
-        <img src="{{logoBase64}}" data-src="{{logoUrl}}" alt="Logo">
-        <h1>報價單 {{quoteNumber}}</h1>
-        <p>日期: {{date}} &nbsp;&nbsp; 截止日期: {{deadline}}</p>
+        <div class="header-left">
+          <img src="{{logoBase64}}" data-src="{{logoUrl}}" alt="Logo">
+          <div>
+            <div class="company-name">{{providerName}}</div>
+            <div class="company-address">{{providerContact}}</div>
+            <div class="company-phone">{{providerPhone}}</div>
+          </div>
+        </div>
       </header>
-      <!-- 兩欄資訊：左側為公司資訊，右側為客戶資訊 -->
-      <div class="info-container">
-        <div class="info-box company-box">
-          <h2>公司資訊</h2>
-          <p><strong>{{providerName}}</strong></p>
-          <p>{{providerContact}}</p>
-        </div>
-        <div class="info-box customer-box">
-          <h2>客戶資訊</h2>
-          <p><strong>{{customerName}}</strong></p>
-          <p>{{customerContact}}</p>
-        </div>
-      </div>
-      <div class="section">
-        <h2>品項明細</h2>
+
+      <div class="customer-info">
         <table>
-          <thead>
-            <tr>
-              <th>品項描述</th>
-              <th>單價 (NTD)</th>
-              <th>數量</th>
-              <th>小計 (NTD)</th>
-            </tr>
-          </thead>
-          <tbody>
-            {{itemsHtml}}
-          </tbody>
-        </table>
-      </div>
-      <div class="section totals">
-        <table class="totals-table">
           <tr>
-            <th>小計 (NTD)</th>
-            <th>稅金 ({{taxPercent}}%)</th>
-            <th>總計 (NTD)</th>
+            <td class="label">客 戶 名 稱</td>
+            <td class="value">：{{customerName}}</td>
+            <td class="label">聯 絡 人</td>
+            <td class="value">：{{contactPerson}} {{contactGender}}</td>
           </tr>
           <tr>
-            <td>{{subtotalFormatted}}</td>
-            <td>{{taxAmountFormatted}}</td>
-            <td class="total-value">{{totalFormatted}}</td>
+            <td class="label">地 　 　 址</td>
+            <td class="value">：{{customerAddress}}</td>
+            <td class="label">電　　話</td>
+            <td class="value">：{{contactPhone}}</td>
+          </tr>
+          <tr>
+            <td class="label">統 一 編 號</td>
+            <td class="value">：{{taxId}}</td>
+            <td class="label">傳　　真</td>
+            <td class="value">：{{fax}}</td>
+          </tr>
+          <tr>
+            <td class="label">報 價 日 期</td>
+            <td class="value">：{{date}}</td>
+            <td colspan="2"></td>
           </tr>
         </table>
       </div>
-      <div class="section">
-        <h2>備註</h2>
-        <p class="notes">{{remarks}}</p>
-      </div>
-      <!-- 用章/簽名方塊 (兩行，粗線邊框，置右) -->
-      <div class="section" style="text-align: right;">
-        <table class="signature-table">
+
+      <div class="quote-title">報　價　單</div>
+
+      <table class="items-table">
+        <thead>
           <tr>
-            <td class="stamp-title">用章 / 簽名</td>
+            <th class="item-number">項　目</th>
+            <th class="item-name">品　名</th>
+            <th class="item-description">項　目</th>
+            <th class="item-quantity">數量</th>
+            <th class="item-price">單價</th>
+            <th class="item-total">金　額</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{itemsHtml}}
+        </tbody>
+      </table>
+
+      <div class="total-box">
+        <table>
+          <tr>
+            <td class="label">合計：</td>
+            <td>${{subtotalFormatted}}</td>
           </tr>
           <tr>
-            <td class="stamp-area"></td>
+            <td class="label">稅金：</td>
+            <td>{{taxDisplay}}</td>
+          </tr>
+          <tr>
+            <td class="label">總計：</td>
+            <td>${{totalFormatted}}</td>
           </tr>
         </table>
       </div>
-      <footer>
-        <p>請確認以上資訊無誤，並依據合約條款辦理。</p>
-      </footer>
+
+      <div class="notes">
+        <p>備　註：</p>
+        <div>{{remarks}}</div>
+      </div>
+
+      <div class="signature">
+        <p>承辦人　{{staffName}}</p>
+      </div>
     </div>
+
     <!-- 載入 html2pdf.js CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <script>
@@ -335,5 +359,4 @@
 
     </script>
   </body>
-
 </html>
