新增烤餅和飲料選項，調整菜單配置以包含更多品項，並更新飲料名稱和價格以提升用戶體驗

--- a/src/form.html
+++ b/src/form.html
@@ -368,16 +368,18 @@
     // 菜單配置
     const MENU_CONFIG = {
       bakery: [
+        { value: "蔥油蘿蔔", label: "蔥油蘿蔔", price: 30 },
+        { value: "香椿蘿蔔", label: "香椿蘿蔔", price: 30 },
         { value: "黃金糖", label: "黃金糖", price: 30 },
-        { value: "黑芝麻", label: "黑芝麻", price: 30 },
         { value: "紅豆泥", label: "紅豆泥", price: 30 },
-        { value: "綠豆沙", label: "綠豆沙", price: 30 },
         { value: "芋仔泥", label: "芋仔泥", price: 30 },
-        { value: "蔥油蘿蔔", label: "蔥油蘿蔔", price: 30 }
+        { value: "黑芝麻", label: "黑芝麻", price: 30 },
+        { value: "綠豆沙", label: "綠豆沙", price: 30 },
       ],
       drink: [
-        { value: "豆漿", label: "豆漿", price: 15 },
-        { value: "黑芝麻堅果飲", label: "黑芝麻堅果飲", price: 40 }
+        { value: "豆漿(杯)", label: "豆漿(杯)", price: 15 },
+        { value: "豆漿(袋)", label: "豆漿(袋)", price: 45 },
+        { value: "黑芝麻堅果飲(袋)", label: "黑芝麻堅果飲(袋)", price: 60 }
       ],
       drinkCustomize: {
         sweetness: [
