--- a/src/quote.html
+++ b/src/quote.html
@@ -119,7 +119,7 @@
     }
 
     .header-left img {
-      max-height: 60px;
+      max-height: 75px;
       margin-right: 15px;
     }
 
@@ -155,10 +155,6 @@
       margin: 2px 0;
     }
 
-    .section-divider {
-      border-bottom: 1px solid #000;
-      padding: 1px 0;
-    }
 
     .customer-info .label {
       width: 70px;
@@ -353,6 +349,27 @@
       max-height: 180mm;
       overflow: hidden;
     }
+
+    .divider-style td {
+      position: relative;
+      padding: 3px 0;
+    }
+    
+    .divider-style td::before {
+      content: '';
+      position: absolute;
+      left: 5%;
+      right: 5%;
+      top: 50%;
+      height: 1px;
+      background: linear-gradient(90deg, 
+        transparent,
+        rgba(0, 0, 0, 0.3) 20%,
+        rgba(0, 0, 0, 0.5) 50%,
+        rgba(0, 0, 0, 0.3) 80%,
+        transparent
+      );
+    }
     </style>
   </head>
 
@@ -382,8 +399,8 @@
                 <td class="label">訂 單 形 式</td>
                 <td class="value">：{{orderType}}</td>
               </tr>
-              <tr>
-                <td colspan="4" class="section-divider"></td>
+              <tr class="section-divider divider-style">
+                <td colspan="4"></td>
               </tr>
               <tr class="info-section">
                 <td class="label">客 戶 名 稱</td>
@@ -401,8 +418,8 @@
                 <td class="label">傳 　 　 真</td>
                 <td class="value">：{{customerFax}}</td>
               </tr>
-              <tr>
-                <td colspan="4" class="section-divider"></td>
+              <tr class="section-divider divider-style">
+                <td colspan="4"></td>
               </tr>
               <tr class="info-section">
                 <td class="label">聯 絡 姓 名</td>
